# vern

./: Cargo.toml  LICENSE  README.md
src/: constants.rs  core.rs  lib.rs  valid.rs
src/internal/: identifiers.rs
tests/: basic.rs
