[package]
name = "vern"
version = "0.1.1"
authors = ["Mu Rong <hi@mrong.me>"]
edition = "2021"
repository = "https://github.com/murongg/vern"
readme = "README.md"
license = "MIT"
description = """
The version number parser for rust
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
